--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -16,6 +16,7 @@ h1 {
 .introduction {
   background-color: #e8eeff;
   text-align: center;
+  padding: 160px 20px;
 }
 
 .introduction p {
@@ -32,4 +33,12 @@ h1 {
   font-size: 24px;
   color: #65617a;
   line-height: 2;
+}
+
+.btn-primary {
+  background: #6c63ff;
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
 }
