--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,12 +1,19 @@
+:root {
+  --primary-color: #e8eeff;
+  --secondary-color: #524f60;
+  --heading-font: "Playfair Display", serif;
+  --deafult-font: "EB Garamond", serif;
+}
+
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  font-family: "Playfair Display", serif;
+  font-family: var(--heading-font);
   font-weight: bold;
-  color: #524f60;
+  color: var(--secondary-color);
 }
 
 h1 {
@@ -14,21 +21,21 @@ h1 {
 }
 
 .introduction {
-  background-color: #e8eeff;
+  background-color: var(--primary-color);
   text-align: center;
   padding: 160px 20px;
 }
 
 .introduction p {
-  font-family: "EB Garamond", serif;
+  font-family: var(--deafult-font);
   font-size: 36px;
   font-weight: bold;
-  color: #524f60;
+  color: var(--secondary-color);
   margin: 0;
 }
 
 .introduction h2 {
-  font-family: "EB Garamond", serif;
+  font-family: var(--deafult-font);
   font-weight: normal;
   font-size: 24px;
   color: #65617a;
