--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -20,6 +20,9 @@ h1 {
   font-size: 96px;
 }
 
+body {
+  font-family: var(--deafult-font);
+}
 .introduction {
   background-color: var(--primary-color);
   text-align: center;
