--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -77,6 +77,29 @@ body {
   padding: 120px 60px;
 }
 
+.about-section {
+  padding: 160px 20px;
+}
+
+.about-section h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+
+.about-section h2 {
+  font-size: 18px;
+  font-family: var(--deafult-font);
+}
+
+.about-section-content {
+  margin: 30px;
+}
+
+.about-photo {
+  max-width: 100%;
+  border-radius: 10px;
+}
+
 @media (max-width: 900px) {
   h1 {
     font-size: 44px;
@@ -93,5 +116,10 @@ body {
 
   .introduction {
     padding: 80px 20px;
+  }
+
+  .about-section {
+    text-align: center;
+    padding: 0;
   }
 }
