--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -77,21 +77,30 @@ body {
   padding: 120px 60px;
 }
 
-.about-section {
+.content-container {
   padding: 160px 20px;
 }
 
-.about-section h1 {
+.content h1 {
   font-size: 64px;
   line-height: 80px;
 }
 
-.about-section h2 {
+.content h2 {
   font-size: 18px;
   font-family: var(--deafult-font);
 }
 
-.about-section-content {
+.content h3 {
+  font-size: 24px;
+  font-family: var(--deafult-font);
+}
+
+.content p {
+  font-size: 14px;
+}
+
+.content {
   margin: 30px;
 }
 
@@ -118,7 +127,7 @@ body {
     padding: 80px 20px;
   }
 
-  .about-section {
+  .content {
     text-align: center;
     padding: 0;
   }
