--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -34,6 +34,10 @@ p {
 body {
   font-family: var(--deafult-font);
 }
+
+a {
+  text-decoration: none;
+}
 .introduction {
   background-color: var(--primary-color);
   text-align: center;
