--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -113,6 +113,36 @@ a {
   border-radius: 10px;
 }
 
+.logo {
+  max-height: 40px;
+}
+
+nav {
+  padding: 20px 0;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+}
+
+nav li {
+  list-style: none;
+  display: inline;
+  line-height: 42px;
+  margin-left: 15px;
+}
+
+nav a {
+  color: #272142;
+  transition: all 150ms ease-in-out;
+}
+
+nav a:hover,
+nav a.active {
+  color: var(--button-color);
+}
+
 @media (max-width: 900px) {
   h1 {
     font-size: 44px;
@@ -134,5 +164,9 @@ a {
   .content {
     text-align: center;
     padding: 0;
+  }
+
+  nav a {
+    font-size: 14px;
   }
 }
