--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -26,6 +26,10 @@ h2 {
   font-size: 64px;
 }
 
+h4 {
+  font-size: 48px;
+}
+
 p {
   font-size: 16px;
   font-weight: normal;
@@ -143,6 +147,45 @@ nav a.active {
   color: var(--button-color);
 }
 
+footer {
+  margin: 30px 0;
+}
+
+footer .contact-box {
+  background: var(--primary-color);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+
+footer .contact-box p {
+  margin: 0;
+}
+
+footer .email-link {
+  font-size: 24px;
+  color: black;
+}
+
+footer .email-link:hover {
+  color: var(--button-color);
+}
+
+footer .social-links a {
+  margin: 0 20px;
+  text-align: center;
+  color: var(--button-color);
+  background: var(--primary-color);
+  padding: 10px 14px;
+  font-size: 18px;
+  border-radius: 100%;
+  transition: all 150ms ease-in-out;
+}
+
+footer .social-links a:hover {
+  color: white;
+  background-color: var(--button-color);
+}
+
 @media (max-width: 900px) {
   h1 {
     font-size: 44px;
@@ -168,5 +211,9 @@ nav a.active {
 
   nav a {
     font-size: 14px;
+  }
+
+  h4 {
+    font-size: 24px;
   }
 }
