updated media query

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -189,7 +189,7 @@ footer .social-links a:hover {
 @media (max-width: 900px) {
   h1,
   content.h1 {
-    font-size: 44px;
+    font-size: 44px !important;
     line-height: 1.4;
   }
 
